[package]
name = "plugin_fest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_rapier2d = "0.16.1"
bevy-inspector-egui = "0.12.1"
leafwing-input-manager = "0.5.1"
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] } 
iyes_loopless = "0.7.1"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
